--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-player": "^2.16.0",
     "sass": "^1.77.4",
     "swiper": "^11.1.4"
   },
