PWA時のリロードボタン実装

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,7 +6,7 @@
     "start_url": "/",
     "name": "mine",
     "short_name": "mine",
-    "description": "\u8eca\u3068\u30d0\u30a4\u30af\u3068\u30ab\u30e1\u30e9",
+    "description": "車とバイクとカメラ",
     "icons": [
         {
             "src": "/icon-192x192.png",
